--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -3,23 +3,29 @@
 
 <div class="row">
     <div class="col">
-        <h3>Personajes</h3> 
-        <hr> 
-        <ul>
-            <li>Krillin - 700</li>
-            <li>Gokú - 15.000</li>
-            <li>Vegeta - 10.000</li>
 
-        </ul>
-
+        <app-personajes  [personajes]="personajes"></app-personajes>
+        
     </div>
 
     <div class="col">
-        <h3>Agregar</h3>
+        <h3>Agregar Personaje</h3>
         <hr>
 
-        <form>
-            <input type="text" placeholder="Nombre" />
+        <form (ngSubmit)="agregar( )">
+            <input type="text" 
+                    placeholder="Nombre"
+                    name="nombre"
+                    [(ngModel)]="nuevo.nombre" />
+            <input type="number" 
+                    placeholder="Poder"
+                    name="poder"
+                    [(ngModel)]="nuevo.poder" />
+            
+
+            <button type="submit">
+            Agregar
+            </button>
         </form>
 
     </div>
