--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,29 +4,18 @@
 <div class="row">
     <div class="col">
 
-        <app-personajes  [personajes]="personajes"></app-personajes>
+        <app-personajes  ></app-personajes>
         
     </div>
 
     <div class="col">
-        <h3>Agregar Personaje</h3>
-        <hr>
 
-        <form (ngSubmit)="agregar( )">
-            <input type="text" 
-                    placeholder="Nombre"
-                    name="nombre"
-                    [(ngModel)]="nuevo.nombre" />
-            <input type="number" 
-                    placeholder="Poder"
-                    name="poder"
-                    [(ngModel)]="nuevo.poder" />
+        <app-agregar 
             
+        [nuevo]="nuevo"
+        
 
-            <button type="submit">
-            Agregar
-            </button>
-        </form>
+        ></app-agregar>
 
     </div>
 
